2007-06-26  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.DesignerSupport.Toolbox/Toolbox.cs,
	  MonoDevelop.DesignerSupport.Toolbox/CompactToolboxView.cs,
	  MonoDevelop.DesignerSupport.Toolbox/CategoryToolboxNode.cs: Worked
	  on a more compact owner drawn toolbox view.

2007-06-20  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.DesignerSupport/ToolboxService.cs: Avoid adding
	  duplicated widgets.
	* MonoDevelop.DesignerSupport.Toolbox/Toolbox.cs: Catch exception
	  thrown when dragging items.

2007-06-06  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.DesignerSupport.addin.xml,
	  MonoDevelop.DesignerSupport/PropertyPad.cs: Default pad placement
	  is now specified in the xml file.

2007-05-31  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.DesignerSupport.Projects/ComponentNodeBuilder.cs: Don't
	  use the CurrentNode property in the OnChanged event since it may
	  not be properly initialized when the event is fired.

2007-05-31  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.DesignerSupport.addin.xml: Changed add-in category.

2007-05-18  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.DesignerSupport.mdp,
	  MonoDevelop.DesignerSupport/CustomDescriptor.cs, Makefile.am: Added
	  default implementation of ICustomTypeDescriptor.
	* MonoDevelop.DesignerSupport.PropertyGrid.Editors/TextEditor.cs,
	  MonoDevelop.DesignerSupport.PropertyGrid.Editors/CollectionEditor.cs:
	  Removed debug code.
	* MonoDevelop.DesignerSupport.PropertyGrid.Editors/EnumerationEditorCell.cs:
	  If an enum member has a Description attribute applied to it, use it
	  as display name.
	* MonoDevelop.DesignerSupport.Projects/ProjectsPropertyProvider.cs:
	  Added more complete descriptions of the properties. Disable the
	  ResourceId property if the file is not a resource.
	* MonoDevelop.DesignerSupport.PropertyGrid/PropertyGrid.cs,
	  MonoDevelop.DesignerSupport.PropertyGrid/PropertyGridTree.cs: When