@@ -1,3 +1,8 @@
+2007-06-27  Mike Krüger <mkrueger@novell.com> 
+
+	* MonoDevelop.DesignerSupport.Toolbox/CompactToolboxView.cs: Worked on
+	  tooltips & scrolling.
+
 2007-06-26  Mike Krüger <mkrueger@novell.com> 
 
 	* MonoDevelop.DesignerSupport.Toolbox/Toolbox.cs,
